[tool.poetry]
name = "llmgraph"
version = "1.3.0" # NOTE: sync with consts.py
description = "Create knowledge graphs with LLMs"
authors = ["Dylan Hogg <dylanhogg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dylanhogg/llmgraph"
keywords = ["Knowledge graph", "LLM"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
include = ["prompts.yaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.0"
networkx = "^3.3"
beautifulsoup4 = "^4.12.3"
pyvis = "^0.3.2"
joblib = "^1.4.2"
tenacity = "^8.4.2"
omegaconf = "^2.3.0"
matplotlib = "^3.9.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"
typer = "^0.9.0"
rich = "^13.7.1"
tqdm = "^4.66.4"
loguru = "^0.7.2"
litellm = "^1.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.3.4"
coverage = "^7.5.4"
pre-commit = "^3.7.1"
pip-audit = "^2.7.3"

[tool.poetry.scripts]
llmgraph = 'llmgraph.console:typer_app'

[tool.black]
line-length = 120
target-version = ['py38']

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
]
ignore = [
    "E501", # line too long, handled by black
    "D203", # 1 blank line required before class docstring
]
line-length = 120
extend-exclude = [".joblib_cache"]
fixable = ["ALL"]
unfixable = []
target-version = "py38"
